<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009dff"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttoncolor"
                android:src="?attr/actionModeCloseDrawable" />

            <ImageButton
                android:id="@+id/reButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttoncolor"
                android:src="@android:drawable/stat_notify_sync"
                />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="#ffff0000"
            android:dividerHeight="10dp"></android.support.v7.widget.RecyclerView>
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/wifiname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/wifiname"
                android:textSize="30sp"
                android:paddingTop="10sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/nameedit"
                android:layout_weight="1"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/wifipassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/wifipassword"
                android:textSize="30sp"
                android:paddingTop="10sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/passwordedit"
                android:layout_weight="1"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp">

            <TextView
                android:text="@string/wifishowpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TextView"
                android:textSize="30sp"
                android:paddingTop="10sp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:textSize="30sp"
                android:textColor="?android:attr/textColorTertiary"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:text="@string/wifisecuritytype"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/wifisecuritytype"
                android:textSize="30sp"
                android:paddingTop="10sp" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/securitytype"
                android:textSize="30sp"
                android:paddingTop="10sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:text="@string/wificonnect"
                android:layout_height="match_parent"
                android:id="@+id/wifiConnectButton"
                android:textSize="30sp"
                android:layout_width="470dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ipAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ipAddress:" />

        <TextView
            android:id="@+id/ipAddressShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="XXX.XXX.XXX.XXX" />
    </LinearLayout>





</LinearLayout>